--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-# Python
-**/__pycache__/
-
 # Virtual Environment
 venv/
+
+# Python
+*.pyc
+__pycache__/
+
+# Flask-recommended
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
