--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,31 @@
-Click==7.0
-Flask==1.1.1
-gunicorn==19.9.0
-itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==1.1.1
-Werkzeug==0.16.0
+absl-py
+astor
+Click
+Flask
+Flask-Cors
+future
+gast
+gomill
+google-pasta
+grpcio
+gunicorn
+h5py
+itsdangerous
+Jinja2
+Keras
+Keras-Applications
+Keras-Preprocessing
+Markdown
+MarkupSafe
+numpy
+opt-einsum
+protobuf
+PyYAML
+scipy
+six
+tensorboard
+tensorflow
+tensorflow-estimator
+termcolor
+Werkzeug
+wrapt
